--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@types/react-native": "^0.63.1",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^25.1.0",
-    "eslint": "^7.2.0",
+    "eslint": ">=5",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "prettier": "^2.0.5",
     "react-test-renderer": "16.9.0",
-    "typescript": "^3.9.7",
-    "prettier": "^2.0.5"
+    "typescript": "^3.9.7"
   }
 }
